Merged 1.62 changes (branch_1-62) into FITS_INTEGRATION_1-62
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/branches/FITS_INTEGRATION_1-62@29955 4f837ed2-42f5-46e7-a7a5-fa17313484d4